--- a/static/main.html
+++ b/static/main.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>fm transmitter API</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.10.0/dist/axios.min.js"></script>
 </head>
+
 <body>
-    <h1 class="title">Welcome!!!</h1>
+    <section class="section">
+        <div class="container">
+            <h1 class="title">welcome!</h1>
+        </div>
+        <div class="container">
+            <h2 class="subtitle">fm transmitter API</h2>
+            <p>Use the API to control your fm transmitter.</p>
+        </div>
+        <div class="container">
+            <button class="button is-primary">play</button>
+            <button class="button is-danger">stop</button>
+        </div>
+    </section>
 </body>
+
 </html>
