Update main.html to change stop button style and add status display; create main.js file

--- a/static/main.html
+++ b/static/main.html
@@ -28,10 +28,12 @@
       <h1 class="title is-4">welcome</h1>
       <div class="buttons is-centered mt-4">
         <button class="button is-primary">play</button>
-        <button class="button is-link">stop</button>
+        <button class="button is-danger">stop</button>
       </div>
+      <p class="subtitle is-6 mt-4">status: <span id="status">stopped</span></p>
     </div>
   </div>
+  <script src="./main.js"></script>
 </body>
 
 </html>
