--- a/static/main.html
+++ b/static/main.html
@@ -25,10 +25,11 @@
 <body>
     <div class="centered-container">
     <div class="box has-text-centered" style="min-width: 300px;">
-      <h1 class="title is-4">welcome</h1>
+      <h1 class="title is-4">welcome to FM blocker!</h1>
+      <input class="input is-primary" type="text" id="frequency" placeholder="Enter frequency (e.g., 101.1)">
       <div class="buttons is-centered mt-4">
-        <button class="button is-primary">play</button>
-        <button class="button is-danger">stop</button>
+        <button class="button is-primary" id="play">play</button>
+        <button class="button is-danger" id="stop">stop</button>
       </div>
       <p class="subtitle is-6 mt-4">status: <span id="status">stopped</span></p>
     </div>
