--- a/static/main.html
+++ b/static/main.html
@@ -10,7 +10,7 @@
         html,
         body {
             height: 100%;
-            direction: rtl;
+            direction: ltr;
         }
 
         .centered-container {
