--- a/static/main.html
+++ b/static/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>fm transmitter API</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
-    <link rel="icon" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/svgs/solid/radio.svg">
+    <link rel="icon" href="favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/axios@1.10.0/dist/axios.min.js"></script>
     <style>
         html,
