--- a/static/main.html
+++ b/static/main.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>fm transmitter API</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.4/css/bulma.min.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="radio.svg" type="image/svg+xml">
     <script src="https://cdn.jsdelivr.net/npm/axios@1.10.0/dist/axios.min.js"></script>
     <style>
         html,
