--- a/static/main.html
+++ b/static/main.html
@@ -12,15 +12,17 @@
         body {
             height: 100%;
             direction: ltr;
+            transition: background-color 0.3s ease-in-out;
         }
 
         .background {
-            filter: blur(5px);
+            filter: blur(20px);
             position: absolute;
             top: 0;
             left: 0;
             width: 100vw;
             height: 100vh;
+            z-index: -1;
         }
 
         .centered-container {
@@ -28,6 +30,7 @@
             justify-content: center;
             align-items: center;
             height: 100%;
+            box-shadow: 0cqmax 0 10px rgba(0, 0, 0, 0.5);
         }
     </style>
 </head>
