--- a/static/main.html
+++ b/static/main.html
@@ -12,7 +12,7 @@
         body {
             height: 100%;
             direction: ltr;
-            transition: background-color 0.3s ease-in-out;
+            transition: all 0.3s ease-in-out;
         }
 
         .background {
@@ -37,7 +37,6 @@
             justify-content: center;
             align-items: center;
             height: 100%;
-            box-shadow: 0cqmax 0 10px rgba(0, 0, 0, 0.5);
         }
     </style>
 </head>
