--- a/static/main.html
+++ b/static/main.html
@@ -46,6 +46,7 @@
     <div class="centered-container">
         <div class="box has-text-centered" style="min-width: 300px;">
             <h1 class="title is-4">welcome to FM blocker!</h1>
+            <p class="subtitle is-6">enter the frequency you want to block,<br>and click play (or press enter)</p>
             <input class="input is-primary" type="text" id="frequency" placeholder="Enter frequency (e.g., 101.1)">
             <div class="buttons is-centered mt-4">
                 <button class="button is-primary" id="play">play</button>
